--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "devDependencies": {
     "@types/node": "^20.11.6",
     "@types/node-fetch": "^2.6.11",
+    "@types/pg": "^8.11.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@fastify/swagger": "^8.14.0",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.1",
     "fastify": "^4.25.2",
     "fastify-gql": "^0.2.1",
     "fastify-static": "^4.7.0",
     "graphql": "^16.8.1",
     "mercurius": "^13.3.3",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "pg": "^8.11.3"
   }
 }
