--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://b.murta.sampaio:Yo2xcVP3HisK@ep-winter-water-a5v2gzsp.us-east-2.aws.neon.tech/goodeals?sslmode=require
+DATABASE_URL=
