--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^20.11.6",
     "@types/node-fetch": "^2.6.11",
     "@types/pg": "^8.11.0",
+    "@types/pg-format": "^1.0.5",
     "typescript": "^5.3.3"
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "graphql": "^16.8.1",
     "mercurius": "^13.3.3",
     "node-fetch": "^3.3.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "pg-format": "^1.0.4"
   }
 }
